--- a/initial-template/app/package.json
+++ b/initial-template/app/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "npx browser-sync --port 3001 -w",
+    "start": "npx http-server --port 3001 -w",
     "download-asserts": "node download.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "http-server": "^14.1.1",
     "tar": "^6.2.0"
   }
 }
